--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ path.line {
 
 #title {
 	text-align: center;
+	background-color: #DDD;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	padding-bottom: 2px;
 }
 
 .area {
@@ -78,6 +82,16 @@ path.line {
 	font-size: 2em;
 }
 
+#vis, #overview {
+	border: 1px solid black;
+	margin: 2px;
+	margin-right: 5px;
+}
+
+#overview {
+	margin-top: 5px;
+}
+
 .callout {
 	z-index: 20;
 	position: absolute;
@@ -87,6 +101,7 @@ path.line {
 
 .controlpanel {
 	margin: 5px;
+	margin-top: 2px;
 	padding: 5px;
 	border: 1px solid black;
 	text-align: left;
@@ -114,4 +129,69 @@ path.line {
 
 .countrycolor {
 	opacity: 0.625;
+}
+
+.helpbutton {
+	opacity: .5;
+}
+
+.helpbutton:hover {
+	opacity: 1.0;
+}
+
+#introbox {
+	background-color: #EEE;
+	width: 600px;
+	position: absolute;
+	border: 2px solid black;
+	border-radius: 10px;
+}
+
+#introbox p {
+	text-align: justify;
+	font-size: 1.3em;
+	padding-left: 15px;
+	padding-right: 15px;
+	line-height: 1.5em;
+	margin-top: 10px;
+}
+
+#introloading {
+	text-align: center;
+}
+
+#fadebox {
+	background-color: #FFF;
+	opacity: .8;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
+
+.introhelp {
+	font-weight: bold;
+	text-align: center;
+	font-size: 1.3em;
+	background-color: #DDD;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+#introloading {
+	font-size: 1.5em;
+	font-weight: bold;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.loadingbutton {
+	background: linear-gradient(#96c8ff, #2f83e0);
+	color: white;
+	cursor: hand;
+	cursor: pointer;
+}
+
+.loadingbutton:hover{
+	background: linear-gradient(#96c8ee, #2467b1);
+	color: white;
 }
