--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,10 @@ path.error {
 	border: 1px solid gray;
 }
 
+.controlpanelinset a {
+	color: #000;
+}
+
 .controlpanelcountry:hover{
 	background-color: #CCC;
 	opacity: 1.0;
@@ -229,4 +233,31 @@ path.error {
 .loadingbutton:hover{
 	background: linear-gradient(#96c8ee, #2467b1);
 	color: white;
+}
+
+#featurebox {
+	font-style: Century Gothic, sans-serif;
+	top: 10;
+	left: 10;
+	background-color: #EEE;
+	position: absolute;
+	border: 2px solid black;
+	z-index: 9999;
+}
+
+.highlight {
+	box-shadow: 0 0 0 99999px rgba( 0, 0, 0, .8 );
+	position: relative;
+	z-index: 9998;
+	pointer-events:  auto;
+	transition: all 0.5s ease;
+}
+
+#featurenext {
+	top: 10;
+	left: 10;
+	background-color: #EEE;
+	position: absolute;
+	border: 2px solid black;
+	z-index: 9999;
 }
