--- a/css/style.css
+++ b/css/style.css
@@ -236,13 +236,17 @@ path.error {
 }
 
 #featurebox {
+	text-align: right;
+	padding-right: 10px;
 	font-style: Century Gothic, sans-serif;
 	top: 10;
 	left: 10;
-	background-color: #EEE;
+	font-size: 4em;
 	position: absolute;
-	border: 2px solid black;
 	z-index: 9999;
+	color: #FFF;
+	right: 10px;
+	text-shadow: 2px 2px 5px #000;
 }
 
 .highlight {
@@ -254,10 +258,11 @@ path.error {
 }
 
 #featurenext {
-	top: 10;
-	left: 10;
 	background-color: #EEE;
 	position: absolute;
+	left: 10;
+	top: 10;
 	border: 2px solid black;
 	z-index: 9999;
+	padding: 10px;
 }
